hard-gists/79f9bfb5a7e767b4b756ff1c7dc04eaa/run.log
=== Docker Run Log for 79f9bfb5a7e767b4b756ff1c7dc04eaa ===
Started at: Mi 29. Okt 17:26:07 CET 2025

[2025-10-29 17:26:07] START: Running container for 79f9bfb5a7e767b4b756ff1c7dc04eaa
[2025-10-29 17:26:07] SUCCESS: Container 99847972bd3e332b45d2ff378fd99e224552c97c4ce6fe5011f1040edcbc0ce1 started for 79f9bfb5a7e767b4b756ff1c7dc04eaa
=== Container logs for 79f9bfb5a7e767b4b756ff1c7dc04eaa ===
  File "/snippet.py", line 44
    print 'file: {}, result: {}'.format(num, result)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 79f9bfb5a7e767b4b756ff1c7dc04eaa ===
[2025-10-29 17:26:09] INFO: Container 99847972bd3e332b45d2ff378fd99e224552c97c4ce6fe5011f1040edcbc0ce1 has stopped
